<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/app_bar_main"/>


    <LinearLayout
        android:background="@drawable/background_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar">


        <TextView
            android:id="@+id/num_people_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_people_label"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/num_people_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/num_people_hint"
            android:labelFor="@+id/num_people_edittext"
            tools:ignore="LabelFor"
            android:autofillHints="number_of_people"
            android:inputType="number"
            android:minHeight="48dp"
            android:minWidth="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/num_people_text"
            android:labelFor="@id/num_people_edittext" />

        <RadioGroup
            android:id="@+id/hunger_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/light_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_text"
                />

            <RadioButton
                android:id="@+id/medium_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_text"
                />

            <RadioButton
                android:id="@+id/ravenous_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ravenous_text"
                />

        </RadioGroup>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/calculate_button_text"
            />

        <TextView
            android:id="@+id/total_pizzas_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:text="@string/total_pizzas_text"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
